fixed scrollbars windows

--- a/app/assets/stylesheets/atlas.css
+++ b/app/assets/stylesheets/atlas.css
@@ -6,7 +6,7 @@ html {
 	color:#333;
 	font-family:Helvetica, Arial, sans-serif;
 	height: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 body {
@@ -14,7 +14,8 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
+	
 }
 
 ul, ol, li {list-style:none;margin:0;padding:0;}
